// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Wizard 1`] = `
<div
  className="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal"
>
  <div
    className="a-Wizard-step"
  >
    <div
      className="a-Wizard-steps"
      id="form-wizard"
    >
      <ul>
        <li
          className="is-active"
          onClick={[Function]}
        >
          <span
            className="a-Badge is-active"
          >
            1
          </span>
          Step 1
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="a-Badge"
          >
            2
          </span>
          Step 2
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="a-Badge"
          >
            3
          </span>
          Step 3
        </li>
      </ul>
    </div>
    <div
      className="a-Wizard-stepContent clearfix"
      role="wizard-body"
    >
      <form
        className="a-Form a-Form--normal"
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className="a-Form-item a-Form-item--normal is-required"
          data-role="form-item"
        >
          <label
            className="a-Form-label"
          >
            <span>
              网址
              <span
                className="a-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            className="a-Form-control a-TextControl"
          >
            <div
              className="a-TextControl-input"
            >
              <input
                autoComplete="off"
                name="website"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                size={10}
                type="url"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="a-Form-item a-Form-item--normal is-required"
          data-role="form-item"
        >
          <label
            className="a-Form-label"
          >
            <span>
              名称
              <span
                className="a-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            className="a-Form-control a-TextControl"
          >
            <div
              className="a-TextControl-input"
            >
              <input
                autoComplete="off"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                size={10}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <input
          style={
            Object {
              "display": "none",
            }
          }
          type="submit"
        />
      </form>
    </div>
    <div
      className="a-Panel-footer a-Wizard-footer"
      role="wizard-footer"
    >
      <button
        className="a-Button a-Button--default is-disabled"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span>
          上一步
        </span>
      </button>
      <button
        className="a-Button a-Button--default"
        onClick={[Function]}
        type="button"
      >
        <span>
          下一步
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard actionPrevLabel actionNextLabel actionFinishLabel className actionClassName 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal wizard-class-name"
    style="position: relative;"
  >
    <div
      class="a-Wizard-step"
    >
      <div
        class="a-Wizard-steps"
        id="form-wizard"
      >
        <ul>
          <li
            class="is-complete"
          >
            <span
              class="a-Badge is-active"
            >
              1
            </span>
            Step 1
          </li>
          <li
            class="is-active"
          >
            <span
              class="a-Badge is-active"
            >
              2
            </span>
            Step 2
          </li>
        </ul>
      </div>
      <div
        class="a-Wizard-stepContent clearfix"
        role="wizard-body"
      >
        <form
          class="a-Form a-Form--normal"
          novalidate=""
        >
          <span
            class="a-TplField"
          >
            <span>
              这是最后一步了
            </span>
          </span>
          <input
            style="display: none;"
            type="submit"
          />
        </form>
      </div>
      <div
        class="a-Panel-footer a-Wizard-footer"
        role="wizard-footer"
      >
        <button
          class="a-Button a-Button--default btn-lg btn-primary"
          type="button"
        >
          <span>
            PrevStep
          </span>
        </button>
        <button
          class="a-Button a-Button--primary btn-lg btn-primary"
          type="button"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard actionPrevLabel actionNextLabel actionFinishLabel className actionClassName 2`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal wizard-class-name"
    style="position: relative;"
  >
    <div
      class="a-Wizard-step"
    >
      <div
        class="a-Wizard-steps"
        id="form-wizard"
      >
        <ul>
          <li
            class="is-active"
          >
            <span
              class="a-Badge is-active"
            >
              1
            </span>
            Step 1
          </li>
          <li
            class=""
          >
            <span
              class="a-Badge"
            >
              2
            </span>
            Step 2
          </li>
        </ul>
      </div>
      <div
        class="a-Wizard-stepContent clearfix"
        role="wizard-body"
      >
        <form
          class="a-Form a-Form--normal"
          novalidate=""
        >
          <div
            class="a-Form-item a-Form-item--normal"
            data-role="form-item"
          >
            <label
              class="a-Form-label"
            >
              <span>
                网址
              </span>
            </label>
            <div
              class="a-Form-control a-TextControl"
            >
              <div
                class="a-TextControl-input"
              >
                <input
                  autocomplete="off"
                  name="website"
                  placeholder=""
                  size="10"
                  type="url"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="a-Form-item a-Form-item--normal"
            data-role="form-item"
          >
            <label
              class="a-Form-label"
            >
              <span>
                名称
              </span>
            </label>
            <div
              class="a-Form-control a-TextControl"
            >
              <div
                class="a-TextControl-input"
              >
                <input
                  autocomplete="off"
                  name="name"
                  placeholder=""
                  size="10"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <input
            style="display: none;"
            type="submit"
          />
        </form>
      </div>
      <div
        class="a-Panel-footer a-Wizard-footer"
        role="wizard-footer"
      >
        <button
          class="a-Button a-Button--default is-disabled btn-lg btn-primary"
          disabled=""
          type="button"
        >
          <span>
            PrevStep
          </span>
        </button>
        <button
          class="a-Button a-Button--default btn-lg btn-primary"
          type="button"
        >
          <span>
            NextStep
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard dialog 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-body"
        >
          <div
            class="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal"
            style="position: relative;"
          >
            <div
              class="a-Wizard-step"
            >
              <div
                class="a-Wizard-steps"
                id="form-wizard"
              >
                <ul>
                  <li
                    class="is-active"
                  >
                    <span
                      class="a-Badge is-active"
                    >
                      1
                    </span>
                    Step 1
                  </li>
                  <li
                    class=""
                  >
                    <span
                      class="a-Badge"
                    >
                      2
                    </span>
                    Step 2
                  </li>
                </ul>
              </div>
              <div
                class="a-Wizard-stepContent clearfix"
                role="wizard-body"
              >
                <form
                  class="a-Form a-Form--normal"
                  novalidate=""
                >
                  <div
                    class="a-Form-item a-Form-item--normal"
                    data-role="form-item"
                  >
                    <label
                      class="a-Form-label"
                    >
                      <span>
                        网址
                      </span>
                    </label>
                    <div
                      class="a-Form-control a-TextControl"
                    >
                      <div
                        class="a-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          name="website"
                          placeholder=""
                          size="10"
                          type="url"
                          value="http://amis.baidu.com"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="a-Form-item a-Form-item--normal"
                    data-role="form-item"
                  >
                    <label
                      class="a-Form-label"
                    >
                      <span>
                        名称
                      </span>
                    </label>
                    <div
                      class="a-Form-control a-TextControl"
                    >
                      <div
                        class="a-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          name="name"
                          placeholder=""
                          size="10"
                          type="text"
                          value="Amis"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="a-Form-item a-Form-item--normal"
                    data-role="form-item"
                  >
                    <button
                      class="a-Button a-Button--default a-Form-control"
                      type="button"
                    >
                      <span>
                        OpenDialog
                      </span>
                    </button>
                  </div>
                  <input
                    style="display: none;"
                    type="submit"
                  />
                </form>
              </div>
              <div
                class="a-Panel-footer a-Wizard-footer"
                role="wizard-footer"
              >
                <button
                  class="a-Button a-Button--default is-disabled"
                  disabled=""
                  type="button"
                >
                  <span>
                    上一步
                  </span>
                </button>
                <button
                  class="a-Button a-Button--default"
                  type="button"
                >
                  <span>
                    下一步
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard dialog 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-body"
        >
          <div
            class="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal"
            style="position: relative;"
          >
            <div
              class="a-Wizard-step"
            >
              <div
                class="a-Wizard-steps"
                id="form-wizard"
              >
                <ul>
                  <li
                    class="is-active"
                  >
                    <span
                      class="a-Badge is-active"
                    >
                      1
                    </span>
                    Step 1
                  </li>
                  <li
                    class=""
                  >
                    <span
                      class="a-Badge"
                    >
                      2
                    </span>
                    Step 2
                  </li>
                </ul>
              </div>
              <div
                class="a-Wizard-stepContent clearfix"
                role="wizard-body"
              >
                <form
                  class="a-Form a-Form--normal"
                  novalidate=""
                >
                  <div
                    class="a-Form-item a-Form-item--normal"
                    data-role="form-item"
                  >
                    <label
                      class="a-Form-label"
                    >
                      <span>
                        网址
                      </span>
                    </label>
                    <div
                      class="a-Form-control a-TextControl"
                    >
                      <div
                        class="a-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          name="website"
                          placeholder=""
                          size="10"
                          type="url"
                          value="http://amis.baidu.com"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="a-Form-item a-Form-item--normal"
                    data-role="form-item"
                  >
                    <label
                      class="a-Form-label"
                    >
                      <span>
                        名称
                      </span>
                    </label>
                    <div
                      class="a-Form-control a-TextControl"
                    >
                      <div
                        class="a-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          name="name"
                          placeholder=""
                          size="10"
                          type="text"
                          value="Amis"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="a-Form-item a-Form-item--normal"
                    data-role="form-item"
                  >
                    <button
                      class="a-Button a-Button--default a-Form-control"
                      type="button"
                    >
                      <span>
                        OpenDialog
                      </span>
                    </button>
                  </div>
                  <input
                    style="display: none;"
                    type="submit"
                  />
                </form>
              </div>
              <div
                class="a-Panel-footer a-Wizard-footer"
                role="wizard-footer"
              >
                <button
                  class="a-Button a-Button--default is-disabled"
                  disabled=""
                  type="button"
                >
                  <span>
                    上一步
                  </span>
                </button>
                <button
                  class="a-Button a-Button--default"
                  type="button"
                >
                  <span>
                    下一步
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard initApi 1`] = `
<div
  className="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal"
>
  <div
    className="a-Wizard-step"
  >
    <div
      className="a-Wizard-steps"
      id="form-wizard"
    >
      <ul>
        <li
          className="is-active"
          onClick={[Function]}
        >
          <span
            className="a-Badge is-active"
          >
            1
          </span>
          Step 1
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="a-Badge"
          >
            2
          </span>
          Step 2
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="a-Badge"
          >
            3
          </span>
          Step 3
        </li>
      </ul>
    </div>
    <div
      className="a-Wizard-stepContent clearfix"
      role="wizard-body"
    >
      <form
        className="a-Form a-Form--normal"
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className="a-Form-item a-Form-item--normal is-required"
          data-role="form-item"
        >
          <label
            className="a-Form-label"
          >
            <span>
              网址
              <span
                className="a-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            className="a-Form-control a-TextControl"
          >
            <div
              className="a-TextControl-input"
            >
              <input
                autoComplete="off"
                name="website"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                size={10}
                type="url"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="a-Form-item a-Form-item--normal is-required"
          data-role="form-item"
        >
          <label
            className="a-Form-label"
          >
            <span>
              名称
              <span
                className="a-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            className="a-Form-control a-TextControl"
          >
            <div
              className="a-TextControl-input"
            >
              <input
                autoComplete="off"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                size={10}
                type="text"
                value="Amis renderer"
              />
            </div>
          </div>
        </div>
        <input
          style={
            Object {
              "display": "none",
            }
          }
          type="submit"
        />
      </form>
    </div>
    <div
      className="a-Panel-footer a-Wizard-footer"
      role="wizard-footer"
    >
      <button
        className="a-Button a-Button--default is-disabled"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span>
          上一步
        </span>
      </button>
      <button
        className="a-Button a-Button--default"
        onClick={[Function]}
        type="button"
      >
        <span>
          下一步
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard initApi reload 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-body"
        >
          <div
            class="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal"
            style="position: relative;"
          >
            <div
              class="a-Wizard-step"
            >
              <div
                class="a-Wizard-steps"
                id="form-wizard"
              >
                <ul>
                  <li
                    class="is-active"
                  >
                    <span
                      class="a-Badge is-active"
                    >
                      1
                    </span>
                    Step 1
                  </li>
                  <li
                    class=""
                  >
                    <span
                      class="a-Badge"
                    >
                      2
                    </span>
                    Step 2
                  </li>
                </ul>
              </div>
              <div
                class="a-Wizard-stepContent clearfix"
                role="wizard-body"
              >
                <form
                  class="a-Form a-Form--normal"
                  novalidate=""
                >
                  <div
                    class="a-Form-item a-Form-item--normal"
                    data-role="form-item"
                  >
                    <label
                      class="a-Form-label"
                    >
                      <span>
                        网址
                      </span>
                    </label>
                    <div
                      class="a-Form-control a-TextControl"
                    >
                      <div
                        class="a-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          name="website"
                          placeholder=""
                          size="10"
                          type="url"
                          value="http://amis.baidu.com"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="a-Form-item a-Form-item--normal"
                    data-role="form-item"
                  >
                    <label
                      class="a-Form-label"
                    >
                      <span>
                        名称
                      </span>
                    </label>
                    <div
                      class="a-Form-control a-TextControl"
                    >
                      <div
                        class="a-TextControl-input"
                      >
                        <input
                          autocomplete="off"
                          name="name"
                          placeholder=""
                          size="10"
                          type="text"
                          value="Amis"
                        />
                      </div>
                    </div>
                  </div>
                  <input
                    style="display: none;"
                    type="submit"
                  />
                </form>
              </div>
              <div
                class="a-Panel-footer a-Wizard-footer"
                role="wizard-footer"
              >
                <button
                  class="a-Button a-Button--default is-disabled"
                  disabled=""
                  type="button"
                >
                  <span>
                    上一步
                  </span>
                </button>
                <button
                  class="a-Button a-Button--default"
                  type="button"
                >
                  <span>
                    下一步
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard initApi reload 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-body"
        >
          <div
            class="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal"
            style="position: relative;"
          >
            <div
              class="a-Wizard-step"
            >
              <div
                class="a-Wizard-steps"
                id="form-wizard"
              >
                <ul>
                  <li
                    class="is-complete"
                  >
                    <span
                      class="a-Badge is-active"
                    >
                      1
                    </span>
                    Step 1
                  </li>
                  <li
                    class="is-active"
                  >
                    <span
                      class="a-Badge is-active"
                    >
                      2
                    </span>
                    Step 2
                  </li>
                </ul>
              </div>
              <div
                class="a-Wizard-stepContent clearfix"
                role="wizard-body"
              >
                <form
                  class="a-Form a-Form--normal"
                  novalidate=""
                >
                  <span
                    class="a-TplField"
                  >
                    <span>
                      这是最后一步了
                    </span>
                  </span>
                  <input
                    style="display: none;"
                    type="submit"
                  />
                </form>
              </div>
              <div
                class="a-Panel-footer a-Wizard-footer"
                role="wizard-footer"
              >
                <button
                  class="a-Button a-Button--default"
                  type="button"
                >
                  <span>
                    上一步
                  </span>
                </button>
                <button
                  class="a-Button a-Button--primary"
                  type="button"
                >
                  <span>
                    完成
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard initApi reload 3`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-body"
        >
          <div
            class="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal"
            style="position: relative;"
          >
            <div
              class="a-Wizard-step"
            >
              <div
                class="a-Wizard-steps"
                id="form-wizard"
              >
                <ul>
                  <li
                    class="is-complete"
                  >
                    <span
                      class="a-Badge is-active"
                    >
                      1
                    </span>
                    Step 1
                  </li>
                  <li
                    class="is-active"
                  >
                    <span
                      class="a-Badge is-active"
                    >
                      2
                    </span>
                    Step 2
                  </li>
                </ul>
              </div>
              <div
                class="a-Wizard-stepContent clearfix"
                role="wizard-body"
              >
                <form
                  class="a-Form a-Form--normal"
                  novalidate=""
                >
                  <span
                    class="a-TplField"
                  >
                    <span>
                      这是最后一步了
                    </span>
                  </span>
                  <input
                    style="display: none;"
                    type="submit"
                  />
                </form>
              </div>
              <div
                class="a-Panel-footer a-Wizard-footer"
                role="wizard-footer"
              >
                <button
                  class="a-Button a-Button--default"
                  type="button"
                >
                  <span>
                    上一步
                  </span>
                </button>
                <button
                  class="a-Button a-Button--primary"
                  type="button"
                >
                  <span>
                    完成
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard initApi show loading 1`] = `
<div
  className="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal"
>
  <div
    className="a-Wizard-step"
  >
    <div
      className="a-Wizard-steps"
      id="form-wizard"
    >
      <ul>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="a-Badge"
          >
            1
          </span>
          Step 1
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="a-Badge"
          >
            2
          </span>
          Step 2
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="a-Badge"
          >
            3
          </span>
          Step 3
        </li>
      </ul>
    </div>
    <div
      className="a-Wizard-stepContent clearfix"
      role="wizard-body"
    >
      加载中
    </div>
  </div>
  <div
    className="a-Spinner-overlay in"
  />
  <div
    className="a-Spinner in a-Spinner--overlay a-Spinner--lg"
  />
</div>
`;

exports[`Renderer:Wizard initApi show loading 2`] = `
<div
  className="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal"
>
  <div
    className="a-Wizard-step"
  >
    <div
      className="a-Wizard-steps"
      id="form-wizard"
    >
      <ul>
        <li
          className="is-active"
          onClick={[Function]}
        >
          <span
            className="a-Badge is-active"
          >
            1
          </span>
          Step 1
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="a-Badge"
          >
            2
          </span>
          Step 2
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="a-Badge"
          >
            3
          </span>
          Step 3
        </li>
      </ul>
    </div>
    <div
      className="a-Wizard-stepContent clearfix"
      role="wizard-body"
    >
      <form
        className="a-Form a-Form--normal"
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className="a-Form-item a-Form-item--normal is-required"
          data-role="form-item"
        >
          <label
            className="a-Form-label"
          >
            <span>
              网址
              <span
                className="a-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            className="a-Form-control a-TextControl"
          >
            <div
              className="a-TextControl-input"
            >
              <input
                autoComplete="off"
                name="website"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                size={10}
                type="url"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="a-Form-item a-Form-item--normal is-required"
          data-role="form-item"
        >
          <label
            className="a-Form-label"
          >
            <span>
              名称
              <span
                className="a-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            className="a-Form-control a-TextControl"
          >
            <div
              className="a-TextControl-input"
            >
              <input
                autoComplete="off"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                size={10}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <input
          style={
            Object {
              "display": "none",
            }
          }
          type="submit"
        />
      </form>
    </div>
    <div
      className="a-Panel-footer a-Wizard-footer"
      role="wizard-footer"
    >
      <button
        className="a-Button a-Button--default is-disabled"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span>
          上一步
        </span>
      </button>
      <button
        className="a-Button a-Button--default"
        onClick={[Function]}
        type="button"
      >
        <span>
          下一步
        </span>
      </button>
    </div>
  </div>
  <div
    className="a-Spinner-overlay"
  />
  <div
    className="a-Spinner a-Spinner--overlay a-Spinner--lg"
  />
</div>
`;

exports[`Renderer:Wizard readOnly 1`] = `
<div
  className="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal"
>
  <div
    className="a-Wizard-step"
  >
    <div
      className="a-Wizard-steps"
      id="form-wizard"
    >
      <ul>
        <li
          className="is-active"
          onClick={[Function]}
        >
          <span
            className="a-Badge is-active"
          >
            1
          </span>
          Step 1
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="a-Badge"
          >
            2
          </span>
          Step 2
        </li>
        <li
          className=""
          onClick={[Function]}
        >
          <span
            className="a-Badge"
          >
            3
          </span>
          Step 3
        </li>
      </ul>
    </div>
    <div
      className="a-Wizard-stepContent clearfix"
      role="wizard-body"
    >
      <form
        className="a-Form a-Form--normal"
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            className="a-Form-label"
          >
            <span>
              网址
            </span>
          </label>
          <div
            className="a-Form-control a-TextControl"
          >
            <div
              className="a-TextControl-input"
            >
              <input
                autoComplete="off"
                name="website"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={true}
                size={10}
                type="url"
                value="http://amis.baidu.com"
              />
            </div>
          </div>
        </div>
        <div
          className="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            className="a-Form-label"
          >
            <span>
              名称
            </span>
          </label>
          <div
            className="a-Form-control a-TextControl"
          >
            <div
              className="a-TextControl-input"
            >
              <input
                autoComplete="off"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                size={10}
                type="text"
                value="Amis"
              />
            </div>
          </div>
        </div>
        <input
          style={
            Object {
              "display": "none",
            }
          }
          type="submit"
        />
      </form>
    </div>
    <div
      className="a-Panel-footer a-Wizard-footer"
      role="wizard-footer"
    >
      <button
        className="a-Button a-Button--default is-disabled"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span>
          上一步
        </span>
      </button>
      <button
        className="a-Button a-Button--default"
        onClick={[Function]}
        type="button"
      >
        <span>
          下一步
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard send data 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal"
    style="position: relative;"
  >
    <div
      class="a-Wizard-step"
    >
      <div
        class="a-Wizard-steps"
        id="form-wizard"
      >
        <ul>
          <li
            class="is-complete"
          >
            <span
              class="a-Badge is-active"
            >
              1
            </span>
            Step 1
          </li>
          <li
            class="is-active"
          >
            <span
              class="a-Badge is-active"
            >
              2
            </span>
            Step 2
          </li>
        </ul>
      </div>
      <div
        class="a-Wizard-stepContent clearfix"
        role="wizard-body"
      >
        <form
          class="a-Form a-Form--normal"
          novalidate=""
        >
          <span
            class="a-TplField"
          >
            <span>
              这是最后一步了
            </span>
          </span>
          <input
            style="display: none;"
            type="submit"
          />
        </form>
      </div>
      <div
        class="a-Panel-footer a-Wizard-footer"
        role="wizard-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="button"
        >
          <span>
            上一步
          </span>
        </button>
        <button
          class="a-Button a-Button--primary"
          type="button"
        >
          <span>
            完成
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard step initApi 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal"
    style="position: relative;"
  >
    <div
      class="a-Wizard-step"
    >
      <div
        class="a-Wizard-steps"
        id="form-wizard"
      >
        <ul>
          <li
            class="is-complete"
          >
            <span
              class="a-Badge is-active"
            >
              1
            </span>
            Step 1
          </li>
          <li
            class="is-active"
          >
            <span
              class="a-Badge is-active"
            >
              2
            </span>
            Step 2
          </li>
          <li
            class=""
          >
            <span
              class="a-Badge"
            >
              3
            </span>
            Step 3
          </li>
        </ul>
      </div>
      <div
        class="a-Wizard-stepContent clearfix"
        role="wizard-body"
      >
        <form
          class="a-Form a-Form--normal"
          novalidate=""
        >
          <div
            class="a-Form-item a-Form-item--normal is-required"
            data-role="form-item"
          >
            <label
              class="a-Form-label"
            >
              <span>
                邮箱
                <span
                  class="a-Form-star"
                >
                  *
                </span>
              </span>
            </label>
            <div
              class="a-Form-control a-TextControl"
            >
              <div
                class="a-TextControl-input"
              >
                <input
                  autocomplete="off"
                  name="email"
                  placeholder=""
                  size="10"
                  type="email"
                  value="xxx@xxx.com"
                />
              </div>
            </div>
          </div>
          <input
            style="display: none;"
            type="submit"
          />
        </form>
      </div>
      <div
        class="a-Panel-footer a-Wizard-footer"
        role="wizard-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="button"
        >
          <span>
            上一步
          </span>
        </button>
        <button
          class="a-Button a-Button--default"
          type="button"
        >
          <span>
            下一步
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard steps not array 1`] = `
<div
  className="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal"
>
  <div
    className="a-Wizard-step"
  >
    <div
      className="a-Wizard-steps"
      id="form-wizard"
    />
    <div
      className="a-Wizard-stepContent clearfix"
      role="wizard-body"
    >
      <p
        className="text-danger"
      >
        配置错误
      </p>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard target 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-body"
        >
          <div
            class="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal"
            style="position: relative;"
          >
            <div
              class="a-Wizard-step"
            >
              <div
                class="a-Wizard-steps"
                id="form-wizard"
              >
                <ul>
                  <li
                    class="is-complete"
                  >
                    <span
                      class="a-Badge is-active"
                    >
                      1
                    </span>
                    Step 1
                  </li>
                  <li
                    class="is-active"
                  >
                    <span
                      class="a-Badge is-active"
                    >
                      2
                    </span>
                    Step 2
                  </li>
                </ul>
              </div>
              <div
                class="a-Wizard-stepContent clearfix"
                role="wizard-body"
              >
                <form
                  class="a-Form a-Form--normal"
                  novalidate=""
                >
                  <span
                    class="a-TplField"
                  >
                    <span>
                      这是最后一步了
                    </span>
                  </span>
                  <input
                    style="display: none;"
                    type="submit"
                  />
                </form>
              </div>
              <div
                class="a-Panel-footer a-Wizard-footer"
                role="wizard-footer"
              >
                <button
                  class="a-Button a-Button--default"
                  type="button"
                >
                  <span>
                    上一步
                  </span>
                </button>
                <button
                  class="a-Button a-Button--primary"
                  type="button"
                >
                  <span>
                    完成
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
          <div
            class="a-Panel a-Panel--default a-Panel--form"
            style="position: relative;"
          >
            <div
              class="a-Panel-heading"
            >
              <h3
                class="a-Panel-title"
              >
                <span
                  class="a-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="a-Panel-body"
            >
              <form
                class="a-Form a-Form--normal"
                novalidate=""
              >
                <div
                  class="a-Form-item a-Form-item--normal"
                  data-role="form-item"
                >
                  <label
                    class="a-Form-label"
                  >
                    <span>
                      Website
                    </span>
                  </label>
                  <div
                    class="a-Form-control a-TextControl"
                  >
                    <div
                      class="a-TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        name="website"
                        placeholder=""
                        size="10"
                        type="text"
                        value="http://amis.baidu.com"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="a-Form-item a-Form-item--normal"
                  data-role="form-item"
                >
                  <label
                    class="a-Form-label"
                  >
                    <span>
                      Name
                    </span>
                  </label>
                  <div
                    class="a-Form-control a-TextControl"
                  >
                    <div
                      class="a-TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        name="name"
                        placeholder=""
                        size="10"
                        type="text"
                        value="Amis"
                      />
                    </div>
                  </div>
                </div>
                <input
                  style="display: none;"
                  type="submit"
                />
              </form>
            </div>
            <div
              class="a-Panel-footerWrap"
            >
              <div
                class="a-Panel-btnToolbar a-Panel-footer"
              >
                <button
                  class="a-Button a-Button--primary"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Wizard validate 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Wizard a-Wizard--horizontal"
    style="position: relative;"
  >
    <div
      class="a-Wizard-step"
    >
      <div
        class="a-Wizard-steps"
        id="form-wizard"
      >
        <ul>
          <li
            class="is-active"
          >
            <span
              class="a-Badge is-active"
            >
              1
            </span>
            Step 1
          </li>
          <li
            class=""
          >
            <span
              class="a-Badge"
            >
              2
            </span>
            Step 2
          </li>
          <li
            class=""
          >
            <span
              class="a-Badge"
            >
              3
            </span>
            Step 3
          </li>
        </ul>
      </div>
      <div
        class="a-Wizard-stepContent clearfix"
        role="wizard-body"
      >
        <form
          class="a-Form a-Form--normal"
          novalidate=""
        >
          <div
            class="a-Form-item a-Form-item--normal is-error is-required"
            data-role="form-item"
          >
            <label
              class="a-Form-label"
            >
              <span>
                网址
                <span
                  class="a-Form-star"
                >
                  *
                </span>
              </span>
            </label>
            <div
              class="a-Form-control is-error a-TextControl"
            >
              <div
                class="a-TextControl-input"
              >
                <input
                  autocomplete="off"
                  name="website"
                  placeholder=""
                  size="10"
                  type="url"
                  value="http"
                />
              </div>
            </div>
            <ul
              class="a-Form-feedback"
            >
              <li>
                URL 格式不正确
              </li>
            </ul>
          </div>
          <div
            class="a-Form-item a-Form-item--normal is-error is-required"
            data-role="form-item"
          >
            <label
              class="a-Form-label"
            >
              <span>
                名称
                <span
                  class="a-Form-star"
                >
                  *
                </span>
              </span>
            </label>
            <div
              class="a-Form-control is-error a-TextControl"
            >
              <div
                class="a-TextControl-input"
              >
                <input
                  autocomplete="off"
                  name="name"
                  placeholder=""
                  size="10"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <ul
              class="a-Form-feedback"
            >
              <li>
                这是必填项
              </li>
            </ul>
          </div>
          <input
            style="display: none;"
            type="submit"
          />
        </form>
      </div>
      <div
        class="a-Panel-footer a-Wizard-footer"
        role="wizard-footer"
      >
        <button
          class="a-Button a-Button--default is-disabled"
          disabled=""
          type="button"
        >
          <span>
            上一步
          </span>
        </button>
        <button
          class="a-Button a-Button--default"
          type="button"
        >
          <span>
            下一步
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;
